# ppam

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  test.json
.github/workflows/: publish-package.yml  python-package.yml
ppai/: cli.py
ppam/: __init__.py  config.py  utils.py
test/: setup.py
tests/: conftest.py  test_update_requirements.py
