[metadata]
name = ppam
version = 0.1.2
description = pip wrapper that auto-updates requirements.txt
long_description = file: README.md
long_description_content_type = text/markdown
author = Umesh Kumar Bedi
license = MIT

[options]
packages = find:
install_requires =
    # no strict runtime deps; uses stdlib + pip

[options.entry_points]
console_scripts =
    ppam=ppam.cli:main