[metadata]
name = ppam
version = 0.1.4
description = pip wrapper that auto-updates requirements.txt
long_description = file: README.md
long_description_content_type = text/markdown
author = Umesh Kumar Bedi
license = MIT

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    ppam=ppam.cli:main